--- a/index.html
+++ b/index.html
@@ -596,7 +596,8 @@ option { background:#0a0a0a; }
   <div class="connection-wrap">
     <div class="connection-box">
       <h2>Connect to RageODevice</h2>
-      <p>Connect your device via USB and click the button below.</p>
+      <p>Connect your device via USB and click the button below.<br>
+<span style="color:#555;font-size:10px;letter-spacing:1px;">Use Chrome or Edge for Web Serial support.</span></p>
 
       <div class="device-info">
         <strong>Device name:</strong>
